--- a/app/views/spree/admin/store_credits/_form.html.erb
+++ b/app/views/spree/admin/store_credits/_form.html.erb
@@ -10,6 +10,10 @@
   <%= f.label :description, t("description")%><br />
   <%= f.text_area :description %>
 <% end %>
+<%= f.field_container :description do %>
+  <%= f.label :category, t("description")%><br />
+  <%= f.select :category, Spree::StoreCredit::CREDIT_CATEGORIES.collect {|c| [c.humanize, c]} %>
+<% end %>
 <%= f.field_container :expiration_date do %>
   <%= f.label :expiration_date, t("expiration date")%><br />
   <%= f.datetime_select :expiration_date, include_blank: true %>
