--- a/app/views/spree/admin/store_credits/index.html.erb
+++ b/app/views/spree/admin/store_credits/index.html.erb
@@ -34,6 +34,7 @@
       <th><%= t("reason") %></th>
       <th><%= t("description") %></th>
       <th><%= t("expiration date") %></th>
+      <th><%= t("category") %></th>
     </tr>
   </thead>
   <tbody>
@@ -48,8 +49,9 @@
         </td>
         <td><%= number_to_currency store_credit.amount %></td>
         <td><%= store_credit.reason %></td>
-        <td><%= store_credit.description %></td>
+        <td><%= store_credit.description %></td>        
         <td><%= store_credit.expiration_date.try(:strftime, '%-m/%-d/%Y') %></td>
+        <td><%= store_credit.category.try(:humanize) %></td>
         <td class="actions">
           <% if store_credit.remaining_amount > 0 %>
             <% if store_credit.amount == store_credit.remaining_amount %>
